[package]
name = "vimo-game"
version = "0.1.0"
authors=["AlexanderARodin"]
edition = "2021"

[dependencies]
anyhow.workspace = true
raalog.workspace = true

#clap = "4.5.20"
#clap = { version = "4.5.6", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }

ratatui = "0.28.1"
edtui = "0.8.1"

game_model = { path = "./game_model" }
event_handler = { path = "./event_handler" }


[workspace]
resolver = "2"
members = [
	"game_model", "event_handler",
]

[workspace.dependencies]
anyhow = "1.0.88"
raalog = { path = "../raalog" }
# raalog = { git = "https://github.com/AlexanderARodin/raalog.git", branch = "main" }

mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
